// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Statistic /> should match the default snapshot 1`] = `
<div
  className="sc-bdVaJa jaytjN"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-bwzfXH bYNPDB"
  >
    Unknown statistic
  </h2>
  <strong
    className="sc-htpNat ibCvOT"
    data-qa="-value"
  >
    -
  </strong>
  <p
    className="sc-bxivhb wfIdL"
  >
    No change
  </p>
</div>
`;

exports[`<Statistic /> with negative change value should match the negative change snapshot 1`] = `
<div
  className="sc-bdVaJa jaytjN"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-bwzfXH bYNPDB"
  >
    A statistic with a negative change
  </h2>
  <strong
    className="sc-htpNat ibCvOT"
    data-qa="statWithNegativeChange-value"
  >
    0
  </strong>
  <p
    className="sc-bxivhb wfIdL"
  >
    -1
     
    decrease
  </p>
</div>
`;

exports[`<Statistic /> with no change in value over the change period should match the no change snapshot 1`] = `
<div
  className="sc-bdVaJa jaytjN"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-bwzfXH bYNPDB"
  >
    A statistic with no change over the change period
  </h2>
  <strong
    className="sc-htpNat ibCvOT"
    data-qa="statWithNoChange-value"
  >
    1
  </strong>
  <p
    className="sc-bxivhb wfIdL"
  >
    No change
  </p>
</div>
`;

exports[`<Statistic /> with percentages should decorate the value with a percent 1`] = `
<div
  className="sc-bdVaJa jaytjN"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-bwzfXH bYNPDB"
  >
    A statistic with a percentage
  </h2>
  <strong
    className="sc-htpNat ibCvOT"
    data-qa="stateWithPercentageValue-value"
  >
    5%
  </strong>
  <p
    className="sc-bxivhb wfIdL"
  >
    No change
  </p>
</div>
`;

exports[`<Statistic /> with positive change value should match the positive change snapshot 1`] = `
<div
  className="sc-bdVaJa jaytjN"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-bwzfXH bYNPDB"
  >
    A statistic with a positive change
  </h2>
  <strong
    className="sc-htpNat ibCvOT"
    data-qa="statWithPositiveChange-value"
  >
    2
  </strong>
  <p
    className="sc-bxivhb wfIdL"
  >
    +
    1
     
    increase
  </p>
</div>
`;
